test/Fail/Issue4586LetEllipsis.err
Issue4586LetEllipsis.agda:5.12-19: error: [NoParseForLHS]
Could not parse the left-hand side ... | _
Operators used in the grammar:
  None
when scope checking let ... | _ = Set in Set
